[package]
name = "ipfs_app"
version = "0.1.0"
description = "IPFS Application"
authors = [""]
license = "MIT"
repository = ""
default-run = "ipfs_app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "process-command-api"] }
tokio = { version = "1.21.2", features = ["full"] }
rand = "0.8.5"
ipfs-api-backend-hyper = "0.5.0"
futures = "0.3.25"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
